# internal/api/handler/add_timerecord.go
@@ -1,0 +1,8 @@
+package handler
+
+import "github.com/gin-gonic/gin"
+
+// AddTimerecord implements openapi.ServerInterface
+func (h *Handlers) AddTimerecord(c *gin.Context) {
+	panic("unimplemented")
+}
