# internal/api/handler/list_timerecord.go
@@ -1,0 +1,10 @@
+package handler
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+// ListTimerecord implements openapi.ServerInterface
+func (h *Handlers) ListTimerecord(c *gin.Context) {
+	panic("unimplemented")
+}
